--- a/.dev.env
+++ b/.dev.env
@@ -1,7 +1,11 @@
-APP_ENV=dev
+APP_ENV=development
 APP_DEBUG=true
 APP_KEY=1xoOfT7Mi9ayfGxiTk5hays0bHHh8RDV
 
+DB_HOST='datacollectiondev.cebvidiejxpf.us-east-1.rds.amazonaws.com'
+DB_DATABASE=DataCollection
+DB_USERNAME=tactile_su
+DB_PASSWORD=2015Tactile
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
