--- a/.prod.env
+++ b/.prod.env
@@ -1,7 +1,11 @@
-APP_ENV=prod
+APP_ENV=production
 APP_DEBUG=true
 APP_KEY=1xoOfT7Mi9ayfGxiTk5hays0bHHh8RDV
 
+DB_HOST='datacollectiond-train.cebvidiejxpf.us-east-1.rds.amazonaws.com'
+DB_DATABASE=DataCollection
+DB_USERNAME=tactile_su
+DB_PASSWORD=2015Tactile
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
